exit knop contact section werkt netjes, klein issue met about knop en z-index ook meteen rechtgezet door timing in jquery lichtjes aan te passen versus work section exit

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -246,9 +246,17 @@ body {
 
 .exit_p:hover {
     cursor: pointer;
+    transition-duration: 0.6s;
+}
+
+.exit_work:hover {
     color: #084E96;
     background-color: #e7e7e7;
-    transition-duration: 0.6s;
+}
+
+.exit_contact:hover {
+    color: #9b0408;
+    background-color: #e7e7e7;
 }
 
 /*  media query vanaf 380 pixels  */
